--- a/_sass/theme/_base.scss
+++ b/_sass/theme/_base.scss
@@ -14,10 +14,6 @@ html {
   padding: 0;
 }
 
-body {
-  min-width: 515px;
-}
-
 body > * {
   display: flex;
   flex-flow: row wrap;
